# SimulationAnalysis

./: .gitignore  README.md  pyproject.toml
Example/: basic.ipynb  plotting.ipynb  plottingResults.ipynb
src/simulation_analysis/: SimAnalysis.py
src/simulation_analysis/Plotter/: Plotter.py  __init__.py
src/simulation_loader/: JsonLoader.py  MongoLoader.py  SimulationLoader.py  __init__.py
tests/: basic_test.py
